--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 	    <!--link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"-->
 	    <link href='css/googlefonts.css' rel='stylesheet' type='text/css'>
 	    <link href='css/googlefontsnonslab.css' rel='stylesheet' type='text/css'>
-	    <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
+	    <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.css">
 	    <link rel="stylesheet" href="css/angular-material.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="mobile/public/css/game.css"> -->
 	    <link rel="stylesheet" type="text/css" href="css/style3.css">
@@ -24,24 +24,20 @@
     <body ng-cloak>
         <div id="container">
         <h1 class="index-title">Play Teen Do Paanch, Dehla Pakad, Twenty Nine, 29, Badam Satti Online</h1>
-            <div class="overlay" ng-show="OverlayVisible">
-                <div class="bgStyle">
+            <div class="bgStyle">
                     <canvas id="myCanvas" width="650" height="420">
                         Your browser does not support the HTML5 canvas tag.
                     </canvas>
-
-                </div>
-                <div class="bgStyle" style="background:rgba(100,100,100,0.6)">
-                    
-                </div>
-                <!-- <div ng-click="exitLogin()" class="close-overlay"><i class="fa fa-times"></i></div> -->
+            </div>
+            <div class="bgStyle" style="background:rgba(10,10,10,0.3)">
+            </div>
+            <div class="overlay" ng-show="OverlayVisible">
                 <div login-dialog></div>
                 <div settings-dialog></div>
             </div>
-            <!--div class="lightbox" id="searchDialog" ng-class="{true: 'open'}[searchDialogVisible]"></div-->
         </div>
         <div class="ifPortrait" style="position: absolute; left: 0; top: 0; width: 100%; height: 100%; background: none repeat scroll 0 0 rgba(255, 255, 255, 0.95); opacity: 0.9; display: none; z-index: 10040;"></div>
-        <div flex class="content page {{pageClass}}" ng-view ui-view></div>
+        <div flex class="content page {{pageClass}}" ng-view ui-view ng-hide="OverlayVisible"></div>
         <div class="overlay loading" style="align-items:center; backgroud: #fff;">
             <div class="waiting-loader" style="top:25%; left:50%;">
                 <div class="cardDiv anime1"></div>
@@ -69,7 +65,7 @@
         var wh = 420;
     </script>
     <script type="text/javascript" src="js/jquery/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="http://www.teendopaanch.in/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="js/socket.io.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-aria.min.js"></script>
     <script type="text/javascript" src="js/angular-animate.min.js"></script>
@@ -129,10 +125,6 @@
                 }
             img.src = $(this).attr('src');
           });
-           var canvasBlock = {
-                x : 65,
-                y : 42
-           }
            var imgs = [
                     '/android_asset/www/css/cards/images/diams.png',
                     '/android_asset/www/css/cards/images/heart.png',
@@ -141,23 +133,32 @@
                     ];
             var wy = $(window).height();
             var wx = $(window).width();
+            var wxby2 = wx/2;
+            var wyby2 = wy/2;
+            var canvasBlock = {
+                x : 65
+           }
+            if(wx>900){
+                canvasBlock.x = 50;
+            }
+            canvasBlock.y = canvasBlock.x/wx*wy;
             var c = document.getElementById("myCanvas");
             c.setAttribute('height',wy);
             c.setAttribute('width',wx);
             var ctx = c.getContext("2d");
             // Create gradient
-            var grd = ctx.createRadialGradient(325, 210, 50, 325, 210, 300);
+            var grd = ctx.createRadialGradient(wxby2, wyby2, 50, wxby2, wyby2, wy);
             grd.addColorStop(0,"rgba(50,50,50,1)");
             grd.addColorStop(1,"#272727");
             // Fill with gradient
             ctx.fillStyle = grd;
             ctx.fillRect(0,0,wx,wy);
-            for (var i = 0; i < 20; i ++) {
-                for (var j = 0; j < 20; j++) {
+            for (var i = 0; i < wx/canvasBlock.x; i ++) {
+                for (var j = 0; j < wy/canvasBlock.y; j++) {
                     var randX = getRandomInt(10,20);
                     var randY = getRandomInt(5,10);
-                    var posX = i*canvasBlock.x/2+randX;
-                    var posY = j*canvasBlock.y/2+randY;
+                    var posX = i*canvasBlock.x+randX;
+                    var posY = j*canvasBlock.y+randY;
                     var imgRandom = getRandomInt(0,3);
                     var image = new Image();
                     image.src = imgs[imgRandom];
