css changes internet connectivity etc

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -6,7 +6,7 @@
 	    <meta http-equiv="Content-Security-Policy" content="default-src 'self' *; style-src 'self' * 'unsafe-inline'; script-src 'self' * 'unsafe-inline' 'unsafe-eval'">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
 
 	    <!--link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"-->
 	    <link href='css/googlefonts.css' rel='stylesheet' type='text/css'>
@@ -29,7 +29,7 @@
                         Your browser does not support the HTML5 canvas tag.
                     </canvas>
             </div>
-            <div class="bgStyle" style="background:rgba(10,10,10,0.3)">
+            <div class="bgStyle">
             </div>
             <div class="overlay" ng-show="OverlayVisible">
                 <div login-dialog></div>
@@ -59,6 +59,9 @@
             <img id="clubsImg" src="/android_asset/www/css/cards/images/club.png">
             <img id="spadeImg" src="/android_asset/www/css/cards/images/spade.png">
         </div>
+        <!-- <div ng-show="showConnMsg" class='.ng-hide' style="position:absolute; left: 5px; bottom:5px; height:20px; background-color:red;">
+            {{connectionMsg}}
+        </div> -->
     </body>
     <script type="text/javascript">
         var ww = 650;
@@ -111,7 +114,7 @@
         }
 
         $(document).ready(function(){
-
+            document.body.style.height = window.innerHeight + 'px';
            var totalImages = $("img").length;
            var iLoaded = 0;
            $("img").each(function (){
