--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- <html ng-app="game325" ng-controller="gameCtrl"> -->
-<html ng-app="game325" ng-controller="gameCtrl">
+<html ng-app="game325" ng-controller="gameCtrl" style="position:fixed;width:100%;height:100%;left:0;top:0;">
     <head>
 	    <title>Teen Do Paanch Cards Game</title>
 	    
@@ -77,7 +77,7 @@
     <script type="text/javascript" src="js/angular-material.min.js"></script>
     <script type="text/javascript" src="js/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="js/angular-touch.min.js"></script>
-    
+
     <script type="text/javascript" src="js/socket.min.js"></script>
     <script type="text/javascript" src="js/react/react.min.js"></script>
     <script type="text/javascript" src="js/react/react-with-addons.min.js"></script>
@@ -126,6 +126,7 @@
                     if(iLoaded == totalImages)
                     {
                         $('.loading').hide();
+                        // navigator.splashscreen.hide();
                     }
                 }
             img.src = $(this).attr('src');
