--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/openfb.js"></script>
+        <script type="text/javascript" src="js/Swiper.js"></script>
 	</head>
     <body ng-cloak>
         <div id="container">
