--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
 
     <script type="text/javascript" src="js/socket.min.js"></script>
     <script type="text/javascript" src="js/react/react.min.js"></script>
-    <script type="text/javascript" src="js/react/react-with-addons.min.js"></script>
+    <script type="text/javascript" src="js/react/react-with-addons-0.13.3.min.js"></script>
     <script type="text/javascript" src="js/react/q.min.js"></script>
     <script type="text/javascript" src="js/Swiper.js"></script>
 
@@ -98,14 +98,14 @@
     <script type="text/javascript" src="js/app/services/authService.js"></script>
     <script type="text/javascript" src="js/app/services/startGameService.js"></script>
     <script type="text/javascript" src="js/app/services/gameService.js"></script>
-    <script>
+    <!--script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
           ga('create', 'UA-62694879-1', 'auto');
           ga('send', 'pageview');
-    </script>
+    </script-->
     <script type="text/javascript">
         window.mobileAndTabletcheck = function() {
             var check = false;
