--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- <html ng-app="game325" ng-controller="gameCtrl"> -->
-<html ng-app="game325" ng-controller="gameCtrl" style="position:fixed;width:100%;height:100%;left:0;top:0;">
+<html ng-controller="gameCtrl" style="position:fixed;width:100%;height:100%;left:0;top:0;">
     <head>
 	    <title>Teen Do Paanch Cards Game</title>
 	    
