for bot not returning card fix

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 	    <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.css">
 	    <link rel="stylesheet" href="css/angular-material.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="mobile/public/css/game.css"> -->
-	    <link rel="stylesheet" type="text/css" href="css/style3.css">
+	    <!-- <link rel="stylesheet" type="text/css" href="css/style3.css"> -->
 	    <link rel="stylesheet" type="text/css" href="css/cover.css">
 	    <link rel="stylesheet" type="text/css" href="css/cards/cards.css" media="screen" />
 	    <link rel="stylesheet" type="text/css" href="css/gameStyle.css">
