--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 	    <!--link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"-->
 	    <link href='css/googlefonts.css' rel='stylesheet' type='text/css'>
 	    <link href='css/googlefontsnonslab.css' rel='stylesheet' type='text/css'>
-	    <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.css">
+	    <!-- <link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.css"> -->
 	    <link rel="stylesheet" href="css/angular-material.min.css">
 		<!-- <link rel="stylesheet" type="text/css" href="mobile/public/css/game.css"> -->
 	    <!-- <link rel="stylesheet" type="text/css" href="css/style3.css"> -->
